--- a/res/layout/company_info_item.xml
+++ b/res/layout/company_info_item.xml
@@ -1,60 +1,79 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="65dp"
+    android:gravity="center_vertical"
+    android:minHeight="65dp"
     android:orientation="horizontal" >
 
-    <CheckBox
-        android:id="@+id/check_company_select"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"/>
-    
- 	<com.narkii.security.common.ScrollForeverTextView
-        android:id="@+id/text_company_name"
-        android:layout_width="0dp"
-        android:layout_weight="4"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical" >
+
+        <CheckBox
+            android:id="@+id/check_company_select"
+            style="@style/enforceCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <ImageView style="@style/infoVerticalDivider" />
+
+    <com.narkii.security.common.ScrollForeverTextView
+        android:id="@+id/text_company_name"
+        style="@style/enforceTextItem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:text="@string/company_name"/>
+        android:text="@string/company_name" />
 
-        <TextView
-            android:id="@+id/text_company_area"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:text="@string/company_area" />
+    <TextView
+        android:id="@+id/text_company_area"
+        style="@style/enforceTextItem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/company_area" />
 
-		<com.narkii.security.common.ScrollForeverTextView 
-		    android:id="@+id/text_company_address"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:scrollHorizontally="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"/>
-        <TextView
-            android:id="@+id/text_responsor"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:text="@string/responsor"/>
+    <com.narkii.security.common.ScrollForeverTextView
+        android:id="@+id/text_company_address"
+        style="@style/enforceTextItem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true" />
 
-        <TextView
-            android:id="@+id/text_phone1"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:layout_height="wrap_content"
-            android:text="@string/phone" />
+    <TextView
+        android:id="@+id/text_responsor"
+        style="@style/enforceTextItem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/responsor" />
 
-        <TextView
-            android:id="@+id/text_valid_date"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:layout_height="wrap_content"
-            android:text="@string/valid_date" />
+    <TextView
+        android:id="@+id/text_phone1"
+        style="@style/enforceTextItem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:text="@string/phone" />
+
+    <TextView
+        android:id="@+id/text_valid_date"
+        style="@style/enforceTextItem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:text="@string/valid_date" />
 
 </LinearLayout>
