--- a/res/layout/company_info_header.xml
+++ b/res/layout/company_info_header.xml
@@ -1,54 +1,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="65dp"
+    android:gravity="center_vertical"
     android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/colum1"
+        style="@style/enfoceTextHeader"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:text="@string/select"/>
+    <ImageView 
+        style="@style/infoVerticalDivider"/>
  	<TextView
         android:id="@+id/colum2"
+        style="@style/enfoceTextHeader"
         android:layout_width="0dp"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:layout_height="wrap_content"
         android:text="@string/company_name" />
  	
 
         <TextView
             android:id="@+id/colum4"
+            style="@style/enfoceTextHeader"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/company_area"/>
 
         <TextView
             android:id="@+id/colum5"
+            style="@style/enfoceTextHeader"
             android:layout_width="0dp"
-            android:layout_weight="4"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/company_address"/>
 
         <TextView
             android:id="@+id/colum6"
+            style="@style/enfoceTextHeader"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/responsor" />
 
         <TextView
             android:id="@+id/colum7"
+            style="@style/enfoceTextHeader"
             android:layout_width="0dp"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/phone"/>
 
         <TextView
             android:id="@+id/colum10"
+            style="@style/enfoceTextHeader"
             android:layout_width="0dp"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/valid_date"/>
 
