--- a/res/layout/container_enforcement.xml
+++ b/res/layout/container_enforcement.xml
@@ -3,10 +3,10 @@
     android:id="@+id/enforce_record"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment 
+<!--     <fragment 
         android:id="@+id/record_fragment"
         class="com.narkii.security.enforce.EnforcementFragment"
         android:tag="enforce_search_tag"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/> -->
 </FrameLayout>
