--- a/res/layout/container_information.xml
+++ b/res/layout/container_information.xml
@@ -3,10 +3,10 @@
     android:id="@+id/information"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment 
+<!--     <fragment 
         android:id="@+id/info_fragment"
         class="com.narkii.security.info.InformationFragment"
         android:tag="info_search_tag"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/> -->
 </FrameLayout>
