--- a/res/layout/enforce_record.xml
+++ b/res/layout/enforce_record.xml
@@ -10,8 +10,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@color/lightsteelblue"
+            android:layout_height="94dp"
+            style="@style/infoActionBar"
             android:orientation="horizontal" >
 
             <TextView
@@ -45,7 +45,7 @@
         </LinearLayout>
 
         <include layout="@layout/enforce_record_header" />
-
+		<ImageView style="@style/infoHorizontalDivider"/>
         <ListView
             android:id="@+id/enforce_list_record"
             android:layout_width="match_parent"
