--- a/res/layout/enforce_record_header.xml
+++ b/res/layout/enforce_record_header.xml
@@ -7,29 +7,36 @@
     <TextView
         android:id="@+id/colum1"
         style="@style/enfoceTextHeader"
-        android:layout_width="80dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:text="@string/select"/>
- 	
+ 	<ImageView 
+        style="@style/infoVerticalDivider"/>
 
         <TextView
             android:id="@+id/colum3"
             style="@style/enfoceTextHeader"
-             android:layout_width="200dp"
+             android:layout_width="0dp"
+        android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/enforce_time_law"/>
 
         <TextView
             android:id="@+id/colum4"
              style="@style/enfoceTextHeader"
-             android:layout_width="200dp"
+             android:layout_width="0dp"
+        android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/enforce_form_check"/>
 
         <TextView
             android:id="@+id/colum5"
              style="@style/enfoceTextHeader"
-             android:layout_width="200dp"
+             android:layout_width="0dp"
+        android:layout_weight="2"
             android:layout_height="wrap_content"
             
             android:text="@string/enforce_paper"/>
@@ -37,21 +44,24 @@
         <TextView
             android:id="@+id/colum6"
             style="@style/enfoceTextHeader"
-             android:layout_width="150dp"
+             android:layout_width="0dp"
+        android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/enforce_officer" />
 
         <TextView
             android:id="@+id/colum7"
              style="@style/enfoceTextHeader"
-             android:layout_width="250dp"
+             android:layout_width="0dp"
+        android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/enforce_num_id"/>
         
         <TextView
             android:id="@+id/colum10"
              style="@style/enfoceTextHeader"
-             android:layout_width="180dp"
+             android:layout_width="0dp"
+        android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/remark"/>
 
