--- a/res/layout/module_responser_manager_info.xml
+++ b/res/layout/module_responser_manager_info.xml
@@ -2,84 +2,96 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
-
-    <Button
-        android:id="@+id/delete_person"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/delete" />
-
     <TableLayout
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:layout_margin="0dp"
+        android:padding="0dp"
         android:stretchColumns="1,3,5" >
 
         <TableRow
             android:id="@+id/tableRow1"
+android:layout_margin="0dp"
+        android:padding="0dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="65dp"
+            android:minHeight="65dp" >
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/infoColumnName"
                 android:text="@string/name" />
 
             <EditText
                 android:id="@+id/text_person_name"
+                style="@style/infoColumnValue"
                 android:inputType="text" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/infoColumnName"
                 android:text="@string/phone" />
 
             <EditText
                 android:id="@+id/text_person_phone"
+                style="@style/infoColumnValue"
                 android:inputType="phone" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/infoColumnName"
                 android:text="@string/email" />
 
             <EditText
                 android:id="@+id/text_person_email"
+                style="@style/infoColumnValue"
                 android:inputType="textEmailAddress" />
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow2"
+            android:layout_margin="0dp"
+        android:padding="0dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="65dp" 
+            android:minHeight="65dp" >
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/infoColumnName"
                 android:text="@string/info_license_secure" />
 
             <EditText
                 android:id="@+id/text_license_secure"
+                style="@style/infoColumnValue"
                 android:inputType="text" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/infoColumnName"
                 android:text="@string/info_date_deliver" />
 
             <EditText
                 android:id="@+id/text_date_deliver"
+                style="@style/infoColumnValue"
                 android:inputType="date" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/infoColumnName"
                 android:text="@string/valid_date" />
 
             <EditText
                 android:id="@+id/text_date_validate"
+                style="@style/infoColumnValue"
                 android:inputType="date" />
         </TableRow>
     </TableLayout>
-
+    <LinearLayout
+        android:background="@drawable/info_column_name_shape"
+        android:padding="0dp"
+        android:layout_margin="0dp"
+        android:layout_width="60dp"
+        android:layout_height="130dp" >
+	<Button
+        android:id="@+id/delete_person"
+        android:background="@drawable/info_base_button_delete_selector"
+        android:layout_width="60dp"
+        android:layout_height="130dp"/>
+	</LinearLayout>
 </LinearLayout>
