--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         		android:layout_height="wrap_content"
         		android:textSize="24sp"
         		android:textColor="#000000"
-        		android:text="用户名："/>
+        		android:text="证件号："/>
 	        <EditText 
 	            android:id="@+id/login_username"
 	            android:layout_width="290dp"
