--- a/res/layout/dialog_license_image.xml
+++ b/res/layout/dialog_license_image.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:minWidth="200dp"
+    android:background="@android:color/holo_red_light" >
 
     <ImageView
         android:id="@+id/image_show"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
-    <Button
+     <Button
         android:id="@+id/button_left_turn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,6 +23,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:text="right" />
+        android:text="right" /> 
 
 </FrameLayout>
