--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -10,16 +10,21 @@
         android:orderInCategory="2"
         android:showAsAction="ifRoom"
         android:title="@string/exchange"/>
-     <item
+    <item
+        android:id="@+id/action_rectify"
+        android:orderInCategory="3"
+        android:showAsAction="ifRoom"
+        android:title="@string/rectify"/>
+    <item
         android:id="@+id/action_sync"
         android:orderInCategory="3"
         android:showAsAction="ifRoom"
         android:title="@string/sync"/>
-      <item
+    <item
         android:id="@+id/action_logout"
         android:showAsAction="never"
         android:title="@string/logout"/>
-       <item
+    <item
         android:id="@+id/action_about"
         android:showAsAction="never"
         android:title="@string/about"/>
