--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -58,16 +58,7 @@
         <item name="android:width">70dp</item>
     </style>
 
-    <style name="ImageDialogStyle" parent="@android:style/Theme.Holo.Dialog">
-
-        <!-- <item name="android:windowFrame">@null</item> -->
-        <!-- <item name="android:windowNoTitle">true</item> -->
-        <item name="android:windowIsFloating">true</item>
-        <!-- <item name="android:windowIsTranslucent">true</item> -->
-        <!-- <item name="android:background">@android:color/background_light</item> -->
-        <item name="android:windowFullscreen">true</item>
-        <!-- <item name="android:backgroundDimEnabled">true</item> -->
-    </style>
+    
 
     <!-- 侧边搜索栏相关样式 -->
     <style name="sidebar">
@@ -80,7 +71,7 @@
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:layout_marginLeft">24dp</item>
     </style>
-    <style name="sideEditText" parent="@android:style/Widget.EditText">
+    <style name="sideEditText" parent="@android:style/Widget.Holo.Light.EditText">
         <item name="android:background">@drawable/sidebar_input1</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginLeft">16dp</item>
@@ -88,7 +79,7 @@
         <item name="android:layout_height">44dp</item>
         <item name="android:focusable">true</item>
     </style>
-    <style name="sideEditTextSmall" parent="@android:style/Widget.EditText">
+    <style name="sideEditTextSmall" parent="@android:style/Widget.Holo.Light.EditText">
         <item name="android:background">@drawable/sidebar_input3</item>
         <item name="android:layout_width">70dp</item>
         <item name="android:layout_height">44dp</item>
@@ -185,7 +176,7 @@
         <item name="android:layout_gravity">center_vertical</item>
     </style>
     <style name="infoActionButtonDelete" parent="@android:style/Widget.Holo.Light.Button">
-        <item name="android:background">@drawable/enforce_button_delete</item>
+        <item name="android:background">@drawable/button_delete_unable</item>
         <item name="android:layout_width">250dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_marginRight">16dp</item>
@@ -234,5 +225,15 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:gravity">left|center_vertical</item> 
         <item name="android:paddingLeft">10dp</item>  
+    </style>
+    <style name="ImageDialogStyle" parent="@android:style/Theme.Holo.Light.Dialog">
+
+         <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+       <item name="android:background">@null</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 </resources>
